--- a/templates/user/cart/cart.html
+++ b/templates/user/cart/cart.html
@@ -87,17 +87,14 @@
                                         {% comment %} template  code {% endcomment %}
 
 
-                                    <td class="quantity-col">
+                                    <!-- <td class="quantity-col">
                                         <div class="cart-product-quantity changeQuantity" data-variantid="{{i.id}}">
-                                                 <input type="number" class="form-control" value="1" min="1" max="5"  value="{{i.product_qty}}" id="pro_qty{{i.id}}">
+                                                 <input type="number" class="form-control" value="{{i.product_qty}}" min="1" max="5"  value="{{i.product_qty}}" id="pro_qty{{i.id}}">
                                             </div><!-- End .cart-product-quantity -->
-                                    </td>
+                                    </td> -->
                                 
                                         
-                                    {% comment %} ashiq code below {% endcomment %}
-                                    
-                                    
-                                    {% comment %} <td class="quantity-col product_data">
+                           <td class="quantity-col product_data">
                                         <div class="input-group quantity mx-auto " style="width: 100px;">
                                             <div class="input-group-btn changeQuantity " data-variantid="{{i.id}}">
                                                 <div class="product-details-quantity">
@@ -111,7 +108,7 @@
                                             </div>
                                             
                                         </div>
-                                    </td> {% endcomment %}
+                                    </td> 
 
                                    
                                     <!-- Assuming the previous code is here and we focus on the "total-col" element -->
@@ -218,7 +215,7 @@
                                     
                                     {% comment %} ///////////////////////////////////////////////////////// {% endcomment %}
 
-                                    {% comment %} {% comment %} <tr class="summary-shipping-row">
+                                    <tr class="summary-shipping-row">
                                         <td>
                                             <div class="custom-control custom-radio">
                                                 <input type="radio" id="free-shipping" name="shipping"
@@ -252,7 +249,7 @@
                                             </div><!-- End .custom-control -->
                                         </td>
                                         <td>$20.00</td>
-                                    </tr><!-- End .summary-shipping-row --> {% endcomment %}
+                                    </tr><!-- End .summary-shipping-row --> 
 
                                   {% comment %} <tr class="summary-shipping-estimate">
                                         <td>Estimate for Your Country<br> <a href="#">Change address</a>
@@ -280,14 +277,14 @@
         </div><!-- End .cart -->
     </div><!-- End .page-content -->
     <!-- Add this to the <head> section of your HTML -->
-    <link rel="stylesheet" href="https://unpkg.com/sweetalert2@11.1.4/dist/sweetalert2.min.css">
 
-    <!-- Add this before the closing </body> tag of your HTML -->
-    <script src="https://unpkg.com/sweetalert2@11.1.4/dist/sweetalert2.all.min.js"></script>
 </main><!-- End .main -->
 
 
+<link rel="stylesheet" href="https://unpkg.com/sweetalert2@11.1.4/dist/sweetalert2.min.css">
 
+<!-- Add this before the closing </body> tag of your HTML -->
+<script src="https://unpkg.com/sweetalert2@11.1.4/dist/sweetalert2.all.min.js"></script>
 <script>
     $('.changeQuantity').click(function (e) {
         e.preventDefault();
@@ -354,8 +351,5 @@
     </div><!-- End .container -->
 </nav><!-- End .breadcrumb-nav -->
 {% endif %}
-
-
-
 
 {% endblock %}
