--- a/templates/user/userprofile/userprofile.html
+++ b/templates/user/userprofile/userprofile.html
@@ -175,6 +175,7 @@
 																			<td><b>$ {{ last_order.total_price }}</b></td>
 																			<td><b>{{ last_order.payment_mode }}</b></td>
 																			<td><a href="{% url 'orderview' last_order.id %}"><span class="btn btn-outline-primary-2">View order details</span></a></td>
+																			{% comment %} orderviewuser {% endcomment %}
 																			<td>
 																				<b>
 																					{% if last_order.order_status.order_status == 'Pending' %}
