--- a/templates/user/registrations/forgotpassword.html
+++ b/templates/user/registrations/forgotpassword.html
@@ -1,9 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Forgot password{% endblock %}
-
-
-
 {% block body %}
 
 <div class="page-wrapper">
@@ -15,7 +12,7 @@
         </div><!-- End .header-middle -->
     </header><!-- End .header -->
 
-    <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image: url " {%
+    <div class="login-page bg-image pt-8 pb-8 pt-md-12 pb-md-12 pt-lg-17 pb-lg-17" style="background-image": url " {%
         static 'template/assets/images/404.jpg' %}">
 
 
@@ -121,6 +118,8 @@
                     </div><!-- End .form-footer -->
                     </form>
                     <div class="form-choice">
+
+
                         <p class="text-center mt-4">Back to <a href="{% url 'signin'%}">Log In</a></p>
                         {% for message in messages %}
                         <div class="message text-center {% if message.tags %}{{ message.tags }}{% endif %}">
@@ -129,7 +128,6 @@
                         {% endfor %}
 
                         </p>
-
 
 
                     </div><!-- End .row -->
