--- a/templates/user/registrations/signin.html
+++ b/templates/user/registrations/signin.html
@@ -37,7 +37,7 @@
 										<input type="checkbox" class="custom-control-input" id="signin-remember-2">
 										<label class="custom-control-label" for="signin-remember-2">Remember Me</label>
 									</div><!-- End .custom-checkbox --> {% endcomment %}
-									<a href="#" class="forgot-link">Forgot Your Password?</a>
+									<a href="{% url "forgotpassword" %}" class="forgot-link">Forgot Your Password?</a>
 									
 								</div><!-- End .form-footer -->
 							</form>
