--- a/templates/user/userprofile/userprofile.html
+++ b/templates/user/userprofile/userprofile.html
@@ -144,7 +144,7 @@
 									aria-labelledby="tab-dashboard-link">
 									{% if user1 %}
 									<h5> HELLO </h5>
-									<h5 style="text-transform: uppercase;">{{ user1.first_name }}
+									<h5 style="text-transform: uppercase;">{{ user.first_name }}
 									</h5>
 
 									{% endif %}
@@ -272,11 +272,11 @@
 														<table>
 															<tr>
 																<td><strong>First Name</strong></td>
-																<td>:{{user1.first_name}}</td>
+																<td>:{{user.first_name}}</td>
 															</tr>
 															<tr>
 																<td><strong>Last Name</strong></td>
-																<td>:{{user1.last_name}}</td>
+																<td>:{{user.last_name}}</td>
 															</tr>
 															<tr>
 																<td><strong>Phone Number</strong></td>
@@ -284,7 +284,7 @@
 															</tr>
 															<tr>
 																<td><strong>Email</strong></td>
-																<td>:{{user1.email}}</td>
+																<td>:{{user.email}}</td>
 															</tr>
 															{% if wallet %}
 															<tr>
@@ -329,7 +329,7 @@
 																				class="custom-control-input">
 																			<label class="custom-control-label"
 																				for="free-shipping">
-																				Set Default Address
+																				Set Default 
 																			</label>
 																		</div><!-- End .custom-control -->
 																		<div class="tab-pane fade"
@@ -408,11 +408,11 @@
 														<table>
 															<tr>
 																<td><strong>First Name</strong></td>
-																<td>:{{user1.first_name}}</td>
+																<td>:{{user.first_name}}</td>
 															</tr>
 															<tr>
 																<td><strong>Last Name</strong></td>
-																<td>:{{user1.last_name}}</td>
+																<td>:{{user.last_name}}</td>
 															</tr>
 															{% comment %} <tr>
 																<td><strong>Phone Number</strong></td>
@@ -420,7 +420,7 @@
 															</tr> {% endcomment %}
 															<tr>
 																<td><strong>Email</strong></td>
-																<td>:{{user1.email}}</td>
+																<td>:{{user.email}}</td>
 															</tr>
 															<tr>
 																<td><strong>Password</strong></td>
