--- a/templates/user/userprofile/password.html
+++ b/templates/user/userprofile/password.html
@@ -1,7 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Change Password{% endblock %}
-
 {% block body %}
 <style>.bg-image  {
     background-image: url('{% static "template/assets/images/404.jpg" %}');
@@ -53,7 +52,7 @@
                                 <input type="password" class="form-control" placeholder="Enter new password"   name="new_password" >
                             </div><!-- End .form-group -->
                             <div class="form-group">
-                                <input type="password" class="form-control" placeholder="Enter confirm new password"  name="confirm_new_password" >
+                                <input type="password" class="form-control" placeholder="Enter confirm new password"  name="confirm_newpassword" >
                             </div><!-- End .form-group -->
                             
                             <div class="form-group">
