--- a/templates/user/userprofile/userprofile.html
+++ b/templates/user/userprofile/userprofile.html
@@ -142,7 +142,7 @@
 
 								<div class="tab-pane fade show active" id="tab-dashboard" role="tabpanel"
 									aria-labelledby="tab-dashboard-link">
-									{% if user1 %}
+									{% if user %}
 									<h5> HELLO </h5>
 									<h5 style="text-transform: uppercase;">{{ user.first_name }}
 									</h5>
@@ -280,7 +280,7 @@
 															</tr>
 															<tr>
 																<td><strong>Phone Number</strong></td>
-																<td>:{{user1.phone_number}}</td>
+																<td>:{{user.phone_number}}</td>
 															</tr>
 															<tr>
 																<td><strong>Email</strong></td>
@@ -373,7 +373,6 @@
 															<div class="addressmgt">
 																<p><a href="{% url 'editaddress' i.id %}">Edit<i
 																			class="fas fa-edit"></i></a>
-
 																</p>
 																<p><a href="{% url 'viewaddress' i.id %}">View <i
 																			class="fas fa-eye"></i></a>
@@ -412,12 +411,9 @@
 															</tr>
 															<tr>
 																<td><strong>Last Name</strong></td>
-																<td>:{{user.last_name}}</td>
+																<td>:{{user1.last_name}}</td>
 															</tr>
-															{% comment %} <tr>
-																<td><strong>Phone Number</strong></td>
-																<td>:{{user1.phone_number}}</td>
-															</tr> {% endcomment %}
+															
 															<tr>
 																<td><strong>Email</strong></td>
 																<td>:{{user.email}}</td>
