--- a/templates/user/userprofile/orderviewuser.html
+++ b/templates/user/userprofile/orderviewuser.html
@@ -119,7 +119,7 @@
 
                             <tr>
                                 <td><strong>User Name</strong></td>
-                                <td>{{orderview.user.first_name}}</td>
+                                <td>{{orderview.address.first_name}}</td>
                             </tr>
 
                             <tr>
@@ -152,7 +152,7 @@
                            
                             <tr>
                                 <td><strong>Ordder status</strong></td>
-                                <td>:{{orderview.order_status.order_status}}</td>
+                                <td>:{{orderview.order_status}}</td>
                             </tr>
                             
                             <br>
@@ -182,7 +182,7 @@
                                 <th scope="col"></th>
                                 {% for i in products %}
                                 {% if i.orderitem_status.item_status == 'Delivered' %}
-                                <th scope="col">Add Your Review</th>
+                                {% comment %} <th scope="col">Add Your Review</th> {% endcomment %}
                                 {% endif %}
 
                                 {% endfor %}
@@ -332,7 +332,7 @@
                                                                             <option value="Other">Other</option>
                                                                         </select>
                                                                         <!-- Notes about your Return -->
-                                                                        <textarea class="form-control" cols="10" rows="4" placeholder="Notes about your Cancel, must be no more than 10 words" name="reason" value=""></textarea>
+                                                                        <textarea class="form-control" cols="10" rows="3" placeholder="Notes about your Cancel, must be no more than 10 words" name="reason" value=""></textarea>
                                                                         <div class="form-footer">
                                                                             <button type="submit" class="btn btn-outline-primary-2">
                                                                                 <span>Confirm Cancel</span>
