--- a/templates/user/userprofile/userprofile.html
+++ b/templates/user/userprofile/userprofile.html
@@ -411,7 +411,7 @@
 															</tr>
 															<tr>
 																<td><strong>Last Name</strong></td>
-																<td>:{{user1.last_name}}</td>
+																<td>:{{user.last_name}}</td>
 															</tr>
 															
 															<tr>
